<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.evgeniy.gascount.MainMenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_counts"
        android:id="@+id/bt_counts"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_methodics"
        android:id="@+id/bt_methodics"
        android:layout_below="@+id/bt_counts"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:layout_alignEnd="@+id/bt_counts" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_pressure"
        android:id="@+id/bt_pressure"
        android:layout_below="@+id/bt_methodics"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:layout_alignEnd="@+id/bt_methodics" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_dewpoint"
        android:text="@string/bt_dewpoint"
        android:layout_below="@+id/bt_pressure"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/bt_pressure"
        android:onClick="onClick" />
</RelativeLayout>
